revision all page

--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-8 col-sm-11 col-lg-11">
-                        <img class="logo-page" src="assets/img/resume_l.png" alt="Fathan Rohman">
+                        <img class="logo-page" src="assets/img/fathan.jpg" alt="Fathan Rohman">
                         <h2 class="title">Resume</h2>
                         <h4 class="sub-title">My Academic Qualifications</h4>
                     </div>
