--- a/index.html
+++ b/index.html
@@ -96,21 +96,21 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-lg-3">
-                        <a href="#" class="hover-animate">
+                        <a href="tel:+6285720247282" class="hover-animate">
                             <span class="ukie-icons hover-animate">
                                 <i class="fa fa-phone"></i>
                             </span> +62857-2024-7282
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-3">
-                        <a href="#" class="hover-animate">
+                        <a href="mailto:karir.fathan@gmail.com" class="hover-animate">
                             <span class="ukie-icons hover-animate">
                                 <i class="fa fa-paper-plane"></i>
                             </span> karir.fathan@gmail.com
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-3">
-                        <a href="#" class="hover-animate">
+                        <a href="contact.html" class="hover-animate">
                             <span class="ukie-icons hover-animate">
                                 <i class="fa fa-map-marker"></i>
                             </span> Ragunan, Jakarta Selatan
