--- a/resume.html
+++ b/resume.html
@@ -228,7 +228,7 @@
                                 <span>65%</span>
                             </div>
                         </div>
-                        <label class="progress-bar-label">AngularJS</label>
+                        <label class="progress-bar-label">AngularJS 2</label>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                                 <span>60%</span>
