--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-8 col-sm-11 col-lg-11">
-                        <img class="logo-page" src="assets/img/contact_l.png" alt="Ukieweb">
+                        <img class="logo-page" src="assets/img/fathan.jpg" alt="Fathan Rohman">
                         <h2 class="title">Contact</h2>
                         <h4 class="sub-title">Get in touch with me</h4>
                     </div>
@@ -50,7 +50,7 @@
                                 </tr>
                                 <tr>
                                     <td class="font-weight-m">Phone</td>
-                                    <td><a href="tel:+6285720247282">+62857-2024-7282</a></td>
+                                    <td><a href="tel:+6285720247282">+62856-9226-8882</a></td>
                                 </tr>
                                 <tr>
                                     <td class="font-weight-m">E-mail</td>
@@ -101,7 +101,7 @@
                     <a href="tel:+6285720247282" class="hover-animate">
                         <span class="ukie-icons hover-animate">
                             <i class="fa fa-phone"></i>
-                        </span> +62857-2024-7282
+                        </span> +62856-9226-8882
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-3">
@@ -119,7 +119,7 @@
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-3 text-right">
-                    <span class="copyright">Copyright © 2016 All right reserved</span>
+                    <span class="copyright">Copyright &copy; 2017 All right reserved</span>
                 </div>
             </div>
         </div>
