--- a/resume.html
+++ b/resume.html
@@ -180,13 +180,13 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-lg-12">
                         <h3 class="title title-skills">Professional skills</h3>
-                        <label class="progress-bar-label">HTML</label>
+                        <label class="progress-bar-label">HTML5</label>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                                 <span>90%</span>
                             </div>
                         </div>
-                        <label class="progress-bar-label">CSS</label>
+                        <label class="progress-bar-label">CSS3</label>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                                 <span>90%</span>
@@ -229,6 +229,12 @@
                             </div>
                         </div>
                         <label class="progress-bar-label">AngularJS 2</label>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                <span>60%</span>
+                            </div>
+                        </div>
+                        <label class="progress-bar-label">Mobile Development (ionic 2 framework hybrid & native)</label>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                                 <span>60%</span>
@@ -349,7 +355,7 @@
                         <a href="tel:+6285720247282" class="hover-animate">
                             <span class="ukie-icons hover-animate">
                                 <i class="fa fa-phone"></i>
-                            </span> +62857-2024-7282
+                            </span> +62856-9226-8882
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-3">
@@ -367,7 +373,7 @@
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-3 text-right">
-                        <span class="copyright">Copyright © 2016 All right reserved</span>
+                        <span class="copyright">Copyright &copy; 2017 All right reserved</span>
                     </div>
                 </div>
             </div>
