--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-7 col-lg-7">
-                        <h1 class="title">Fathan Rohman</h1>
+                        <h1 class="title">Fathan Rohman, S.T</h1>
                         <h3 class="sub-title">Frontend Developer</h3>
                         <div class="social">
                             <ul class="animated" data-animation="fadeIn" data-animation-delay="600">
                                 <li>
-                                    <a class="ukie-icons hover-animate" href="https://www.facebook.com/fathan.basinda">
+                                    <a class="ukie-icons hover-animate" href="https://www.facebook.com/fathan.basinda" target="_blank">
                                         <i class="fa fa-facebook"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="ukie-icons hover-animate" href="https://twitter.com/fathan_rohman">
+                                    <a class="ukie-icons hover-animate" href="https://twitter.com/fathan_rohman" target="_blank">
                                         <i class="fa fa-twitter"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="ukie-icons hover-animate" href="https://www.linkedin.com/in/fathan">
+                                    <a class="ukie-icons hover-animate" href="https://www.linkedin.com/in/fathan" target="_blank">
                                         <i class="fa fa-linkedin"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="ukie-icons hover-animate" href="https://plus.google.com/+FathanRohmancds">
+                                    <a class="ukie-icons hover-animate" href="https://plus.google.com/+FathanRohmancds" target="_blank">
                                         <i class="fa fa-google-plus"></i>
                                     </a>
                                 </li>
@@ -76,12 +76,12 @@
                             </span>
                             <span class="name">Resume</span>
                         </a>
-                        <a href="portfolio.html" class="menu-li">
+                        <!-- <a href="portfolio.html" class="menu-li">
                             <span class="foto">
                                 <img src="assets/img/menu/portfolio.png" class="menu-img" data-img-name="portfolio" alt="">
                             </span>
                             <span class="name">Portfolio</span>
-                        </a>
+                        </a> -->
                         <a href="contact.html" class="menu-li">
                             <span class="foto">
                                 <img src="assets/img/menu/contact.png" class="menu-img" data-img-name="contact" alt="">
@@ -99,7 +99,7 @@
                         <a href="tel:+6285720247282" class="hover-animate">
                             <span class="ukie-icons hover-animate">
                                 <i class="fa fa-phone"></i>
-                            </span> +62857-2024-7282
+                            </span> +62856-9226-8882
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-3">
@@ -117,7 +117,7 @@
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-3 text-right">
-                        <span class="copyright">Copyright © 2016 All right reserved</span>
+                        <span class="copyright">Copyright &copy; 2017 All right reserved</span>
                     </div>
                 </div>
             </div>
