--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
                         <a href="tel:+6285720247282" class="hover-animate">
                             <span class="ukie-icons hover-animate">
                                 <i class="fa fa-phone"></i>
-                            </span> +62857-2024-7282
+                            </span> +62856-9226-8882
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-3">
@@ -122,7 +122,7 @@
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-3 text-right">
-                        <span class="copyright">Copyright © 2016 All right reserved</span>
+                        <span class="copyright">Copyright &copy; 2017 All right reserved</span>
                     </div>
                 </div>
             </div>
