--- a/profile.html
+++ b/profile.html
@@ -42,7 +42,7 @@
                     <div class="col-xs-12 col-sm-12 col-lg-7">
                         <h3 class="title">Hello, I am Frontend Developer</h3>
                         <p>
-                            Hi everyone, I am currently is a Software Engineer at PT. Apecsa Optima Solutions. I am very fond of my current job. in this ApecsaOS I work in a team from the start to the Project Manager, Backend, Frontend, UI / UX Designer, Quality Assurance, Testing Engineer. and the position of coincidence that I live in this company as Frontend Developer. So for those of you who want to contact me either through phone contact me at +62857-2024-7282 or can be via e-mail: karir.fathan@gmail.com
+                            Hi everyone, I am currently is a Software Engineer at PT. Apecsa Optima Solutions. I am very fond of my current job. in this ApecsaOS I work in a team from the start to the Project Manager, Backend, Frontend, UI / UX Designer, Quality Assurance, Testing Engineer. and the position of coincidence that I live in this company as Frontend Developer. So for those of you who want to contact me either through phone contact me at +62856-9226-8882 or can be via e-mail: karir.fathan@gmail.com
                         </p>
                         <p>
                             <a href="mailto:karir.fathan@gmail.com" class="btn hover-animate">Hire me Now</a>
@@ -70,7 +70,7 @@
                                 </tr>
                                 <tr>
                                     <td class="font-weight-m">Phone</td>
-                                    <td class="text-right"><a href="tel:+6285720247282">+62857-2024-7282</a></td>
+                                    <td class="text-right"><a href="tel:+6285720247282">+62856-9226-8882</a></td>
                                 </tr>
                                 <tr>
                                     <td class="font-weight-m">Website</td>
@@ -92,15 +92,15 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-lg-12">
                         <div class="circle-block">
-                            <span class="icon hover-animate"><i class="fa fa-desktop"></i></span>
+                            <span class="icon hover-animate">
+                                <i class="fa fa-desktop"></i>
+                            </span>
                             <span class="name hover-animate">Web Design</span>
                         </div>
-                        <div class="circle-block ">
-                            <span class="icon hover-animate"><i class="fa fa-globe"></i></span>
-                            <span class="name hover-animate">SEO</span>
-                        </div>
                         <div class="circle-block">
-                            <span class="icon hover-animate"><i class="fa fa-mobile"></i></span>
+                            <span class="icon hover-animate">
+                                <i class="fa fa-desktop"></i>
+                            </span>
                             <span class="name hover-animate">Web Development</span>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                         <a href="tel:+6285720247282" class="hover-animate">
                             <span class="ukie-icons hover-animate">
                                 <i class="fa fa-phone"></i>
-                            </span> +62857-2024-7282
+                            </span> +62856-9226-8882
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-3">
@@ -132,7 +132,7 @@
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-3 text-right">
-                        <span class="copyright">Copyright © 2016 All right reserved</span>
+                        <span class="copyright">Copyright &copy; 2017 All right reserved</span>
                     </div>
                 </div>
             </div>
