--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                             </span>
                             <span class="name">Portfolio</span>
                         </a> -->
-                        <a href="contact.html" class="menu-li">
+                        <!--<a href="contact.html" class="menu-li">
                             <span class="foto">
                                 <img src="assets/img/menu/contact.png" class="menu-img" data-img-name="contact" alt="">
                             </span>
                             <span class="name">Contact</span>
-                        </a>
+                        </a>-->
                     </div>
                 </div>
             </div>
