--- a/resume.html
+++ b/resume.html
@@ -204,7 +204,7 @@
                                 <span>60%</span>
                             </div>
                         </div>
-                        <label class="progress-bar-label">Bootstrap/Foundation</label>
+                        <label class="progress-bar-label">Bootstrap</label>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                                 <span>95%</span>
@@ -228,13 +228,19 @@
                                 <span>65%</span>
                             </div>
                         </div>
-                        <label class="progress-bar-label">AngularJS 2</label>
+                        <label class="progress-bar-label">Angular</label>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                                 <span>60%</span>
                             </div>
                         </div>
-                        <label class="progress-bar-label">Mobile Development (ionic 2 framework hybrid & native)</label>
+                        <label class="progress-bar-label">Vue.JS</label>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                                <span>50%</span>
+                            </div>
+                        </div>
+                        <label class="progress-bar-label">Ionic Framework</label>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                                 <span>60%</span>
@@ -256,12 +262,6 @@
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
                                 <span>65%</span>
-                            </div>
-                        </div>
-                        <label class="progress-bar-label">Adobe Illustrator</label>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="63" aria-valuemin="0" aria-valuemax="100">
-                                <span>63%</span>
                             </div>
                         </div>
                         <label class="progress-bar-label">UX Design</label>
